--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,17 @@
 			  <groupId>javax.servlet</groupId> 
 			  <artifactId>jstl</artifactId> 
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+		
+		<!-- devtools -->
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		
+		<!-- session-->
+		<dependency>
+    		<groupId>org.springframework.session</groupId>
+    		<artifactId>spring-session-core</artifactId>
 		</dependency>
 
 	</dependencies>
